2005-03-22  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: eel and nautilus have been branched.

2005-03-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-nettool has been branched.

2005-03-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added mcatalog.
	totem has been branched.

2005-03-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added update-manager.

2005-03-20  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gnome-media has been branched.

2005-03-20  Danilo Šegan  <dsegan@gmx.net>

	* new-release.py: Added script for creating branches for new Gnome
	releases.

2005-03-19  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: eog has been branched.

2005-03-18  Marcel Telka  <marcel@telka.sk>

	* translation-status.xml: Fixed gnome-netstatus branch.

2005-03-15  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: nautilus-cd-burner has been branched.

2005-03-15  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gnome-netstatus, gconf has been
	branched.

2005-03-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-vfs has been branched.

2005-03-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gdm2 has been
	silently branched.

2005-03-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-system-monitor has
	been branched.

2005-03-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-volume-manager,
	gnome-system-tools, and system-tools-backends have
	been branched.

2005-03-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added silky to extras.
	epiphany, gcalctool, gnome-utils, gnomemeeting,
	gnome-themes, and zenity have been branched.

2005-03-07  Christian Persch  <chpe@cvs.gnome.org>

	* translation-status.xml: Epiphany Extensions HEAD is
	epiphany-extensions-1.8.pot now.

2005-03-07  Christian Rose  <menthos@menthos.com>
