@@ -168,7 +168,7 @@
       <component name="bug-buddy" dir="bug-buddy" group="desktop">
         <podir dir="po"/>
         <potname name="bug-buddy.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -1273,7 +1273,7 @@
       <component name="gnome-menus" dir="gnome-menus" group="desktop">
 				<podir dir="po"/>
         <potname name="gnome-menus.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -1386,7 +1386,7 @@
       <component name="gnome-panel" dir="gnome-panel" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-panel-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
