@@ -1,3 +1,8 @@
+2005-03-23  Adam Weinberger  <adamw@gnome.org>
+
+	* translation-status.xml: bug-buddy, gnome-panel,
+	  and gnome-menus have been branched.
+
 2005-03-22  Adam Weinberger  <adamw@gnome.org>
 
 	* translation-status.xml: eel and nautilus have been branched.
